--- a/submenu/dormitorio.html
+++ b/submenu/dormitorio.html
@@ -85,7 +85,7 @@
     <section class="row">
         <div id="dorm" class="col-s-12 col-xl-12 col-md-12">
             <h3>Dormitorio</h3>
-            <img src="../img/productos/dormitorio1.png" id="dormitorio">
+            <img src="../img/productos/dormitorio1.png" id="dormitorio"class="col-s-12 col-xl-12 col-md-12">
         </div>
     </section>
     <!--inicio footer--> 
