--- a/submenu/organizadores.html
+++ b/submenu/organizadores.html
@@ -85,7 +85,7 @@
     <section class="row">
         <div class="col-s-12 col-xl-12 col-md-12">
             <h3>Organizadores</h3>
-            <img src="../img/productos/organizadores1.png" id="organizadores">
+            <img src="../img/productos/organizadores1.png" id="organizadores"class="col-s-12 col-xl-12 col-md-12">
         </div>
     </section>
     <!--inicio footer--> 
