--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <!--incio main-->
     <main class="row">
         <div class="container">
+            <div class="col-s-3 col-xl-12 col-md-12">
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
                     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -80,11 +81,12 @@
                 </button>
             </div>
         </div>
+    </div>
     </main>
     <article class="row">
         <div class="col-s-12 col-xl-12 col-md-12">
             <h3>Productos Destacados</h3>
-            <img src="img/destacados.png" id="destacados">
+            <img src="img/destacados.png" id="destacados" class="col-s-12 col-xl-12 col-md-12">
         </div>
     </article>
     <!--incio footer-->
