--- a/submenu/cocina.html
+++ b/submenu/cocina.html
@@ -84,7 +84,7 @@
     <section class="row">
         <div id="dorm" class="col-s-12 col-xl-12 col-md-12">
             <h3>Cocina</h3>
-            <img src="../img/productos/cocina1.png" id="cocina">
+            <img src="../img/productos/cocina1.png" id="cocina" class="col-s-12 col-xl-12 col-md-12">
         </div>
     </section>
     <!--inicio footer--> 
