--- a/submenu/living.html
+++ b/submenu/living.html
@@ -85,7 +85,7 @@
     <section class="row">
         <div class="col-s-12 col-xl-12 col-md-12">
             <h3>Living</h3>
-            <img src="../img/productos/living1.png" id="living1" alt="imagen">
+            <img src="../img/productos/living1.png" id="living1" class="col-s-12 col-xl-12 col-md-12">
         </div>
     </section>
     <!--inicio footer-->
