--- a/birkinhome.html
+++ b/birkinhome.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&family=Raleway:ital,wght@0,200;1,700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&family=Raleway:ital,wght@0,200;1,700&display=swap" rel="stylesheet">
     <title>Birkin Home</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
-        integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <link rel="stylesheet" href="birkinhome.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <link rel="stylesheet" href="./archivos.scss/birkinhome.scss/birkinhome.css">
+    <meta name="descripcion" content="Encontrá los productos más lindos en bazar y decoración para el hogar. | Descubrí la línea de bazar y deco para el hogar en nuestro shop.">
+    <meta name="keywords" content="deco,home,bazar,decoracion,casa">
 </head>
 <body>
     <!--inicio header-->
@@ -101,11 +100,13 @@
                 <p> Ciudad de Buenos Aires</p>
                 <p> (+5411)111111</p>
                 <p>info@birkinhome.com</p>
-        </div class="social">
-        <div>
-            <h2>Social</h2>
-            <p><img src="img/footer/face.png" width="25px">Facebook</p>
-            <p><img src="img/footer/insta.png" width="20px">Instagram</p>
+            </section>
+        </div>
+        <div class="social">
+            <section class="col-s-12 col-xl-12 col-md-12">
+                <h2>Social</h2>
+                <p><img src="img/footer/face.png" width="25px">Facebook</p>
+                <p><img src="img/footer/insta.png" width="20px">Instagram</p>
             </section>
         </div>
     </footer>
@@ -121,5 +122,4 @@
         integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous">
     </script>
 </body>
-
 </html>
