--- a/contacto.html
+++ b/contacto.html
@@ -7,10 +7,12 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&family=Raleway:ital,wght@0,200;1,700&display=swap"
         rel="stylesheet">
-    <title>Birkin Home</title>
+    <title>Contactanos</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <link rel="stylesheet" href="contacto.css">
+    <link rel="stylesheet" href="./archivos.scss/contacto.scss/contacto.css">
+    <meta name="descripcion" content="Escribinos y nos pondremos en contacto a la brevedad.">
+    <meta name="keywords" content="contacto,bazar, deco">
 </head>
 <body>
     <!--inicio header-->
@@ -104,8 +106,8 @@
                 <input type="text" required placeholder="Email">
                 <br><br>
                 <input class="boton" type="submit" value="Suscribirse">
-        </div>
-        </section>
+            </section>
+        </div> 
     </article>
     <!--incio footer-->
     <footer class="row">
@@ -116,11 +118,13 @@
                 <p> Ciudad de Buenos Aires</p>
                 <p> (+5411)111111</p>
                 <p>info@birkinhome.com</p>
-        </div class="social">
-        <div>
-            <h2>Social</h2>
-            <p><img src="img/footer/face.png" width="25px">Facebook</p>
-            <p><img src="img/footer/insta.png" width="20px">Instagram</p>
+            </section>
+        </div>
+        <div class="social">
+            <section class="col-s-12 col-xl-12 col-md-12">
+                <h2>Social</h2>
+                <p><img src="img/footer/face.png" width="25px">Facebook</p>
+                <p><img src="img/footer/insta.png" width="20px">Instagram</p>
             </section>
         </div>
     </footer>
@@ -136,5 +140,4 @@
         integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous">
     </script>
 </body>
-
 </html>
