--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&family=Raleway:ital,wght@0,200;1,700&display=swap" rel="stylesheet">
     <title>Birkin Home</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <link rel="stylesheet" href="indexscss/index.css">
+    <link rel="stylesheet" href="./archivos.scss/indexscss/index.css">
+    <meta name="descripcion" content="Encontrá los productos más lindos en bazar y decoración para el hogar. | Descubrí la línea de bazar y deco para el hogar en nuestro shop.">
+    <meta name="keywords" content="deco,home,bazar,casa,decoracion">
 </head>
 <body>
     <!--inicio header-->
@@ -52,36 +54,36 @@
     <main class="row">
         <div class="container">
             <div class="col-s-3 col-xl-12 col-md-12">
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                </ol>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="img/carrousel/slid11.jpg" class="d-block w-100" alt="imagen" height="500px">
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="img/carrousel/slid11.jpg" class="d-block w-100" alt="imagen" height="500px">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/carrousel/slid111.jpg" class="d-block w-100" alt="imagen" height="500px">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/carrousel/slid1.jpg" class="d-block w-100" alt="imagen" height="500px">
+                        </div>
                     </div>
-                    <div class="carousel-item">
-                        <img src="img/carrousel/slid111.jpg" class="d-block w-100" alt="imagen" height="500px">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/carrousel/slid1.jpg" class="d-block w-100" alt="imagen" height="500px">
-                    </div>
+                    <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators"
+                        data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-target="#carouselExampleIndicators"
+                        data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </button>
                 </div>
-                <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators"
-                    data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-target="#carouselExampleIndicators"
-                    data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </button>
             </div>
         </div>
-    </div>
     </main>
     <article class="row">
         <div class="col-s-12 col-xl-12 col-md-12">
@@ -98,11 +100,13 @@
                 <p> Ciudad de Buenos Aires</p>
                 <p> (+5411)111111</p>
                 <p>info@birkinhome.com</p>
-        </div class="social">
-        <div>
-            <h2>Social</h2>
-            <p><img src="img/footer/face.png" width="25px">Facebook</p>
-            <p><img src="img/footer/insta.png" width="20px">Instagram</p>
+            </section>
+        </div>
+        <div class="social">
+            <section class="col-s-12 col-xl-12 col-md-12">
+                <h2>Social</h2>
+                <p><img src="img/footer/face.png" width="25px">Facebook</p>
+                <p><img src="img/footer/insta.png" width="20px">Instagram</p>
             </section>
         </div>
     </footer>
