--- a/nosotros.html
+++ b/nosotros.html
@@ -10,7 +10,7 @@
     <title>Birkin Home</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <link rel="stylesheet" href="nosotros.css">
+    <link rel="stylesheet" href="./archivos.scss/nosotros.scss/nosotros.css">
 </head>
 <body>
     <!--inicio header-->
@@ -98,25 +98,23 @@
                 <p> Ciudad de Buenos Aires</p>
                 <p> (+5411)111111</p>
                 <p>info@birkinhome.com</p>
-        </div class="social">
-        <div>
-            <h2>Social</h2>
-            <p><img src="img/footer/face.png" width="25px">Facebook</p>
-            <p><img src="img/footer/insta.png" width="20px">Instagram</p>
+            </section>
+        </div>
+        <div class="social">
+            <section class="col-s-12 col-xl-12 col-md-12">
+                <h2>Social</h2>
+                <p><img src="img/footer/face.png" width="25px">Facebook</p>
+                <p><img src="img/footer/insta.png" width="20px">Instagram</p>
             </section>
         </div>
     </footer>
     <!--fin footer-->
     <!-- links -->
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
-        integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous">
     </script>
 </body>
-
 </html>
