--- a/productos.html
+++ b/productos.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&family=Raleway:ital,wght@0,200;1,700&display=swap" rel="stylesheet">
     <title>Birkin Home</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <link rel="stylesheet" href="productos.css">
+    <link rel="stylesheet" href="./archivos.scss/productos.scss/productos.scss">
 </head>
 <body>
     <!--inicio header-->
