--- a/submenu/living.html
+++ b/submenu/living.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="living.css">
+    <link rel="stylesheet" href="../archivos.scss/productos.scss/living.scss/living.css">
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&family=Raleway:ital,wght@0,200;1,700&display=swap" rel="stylesheet">
-    <title>Birkin Home</title>
+    <title>Compra Living</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <meta name="descripcion" content="Tene el living de tus sueños con nuestros productos">
+    <meta name="keywords" content="deco,sillon,mantas,lamparas,floreros,cuadros,velas">
 </head>
 <body>
     <!--inicio header-->
@@ -97,11 +99,13 @@
                 <p> Ciudad de Buenos Aires</p>
                 <p> (+5411)111111</p>
                 <p>info@birkinhome.com</p>
-        </div class="social">
-        <div>
-            <h2>Social</h2>
-            <p><img src="../img/footer/face.png" width="25px">Facebook</p>
-            <p><img src="../img/footer/insta.png" width="20px">Instagram</p>
+            </section>
+        </div>
+        <div class="social">
+            <section class="col-s-12 col-xl-12 col-md-12"></section>
+                <h2>Social</h2>
+                <p><img src="../img/footer/face.png" width="25px">Facebook</p>
+                <p><img src="../img/footer/insta.png" width="20px">Instagram</p>
             </section>
         </div>
     </footer>
